test/e2e/features/longgatewayname/testdata/gateway-with-long-name.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: very-long-gateway-name-to-verify-routing-behavior-still-works-much-more-longer
  annotations:
    e2e.kgateway.dev/self-managed: "true"
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: long-example-route
spec:
  parentRefs:
    - name: very-long-gateway-name-to-verify-routing-behavior-still-works-much-more-longer
  hostnames:
    - "long.example.com"
  rules:
    - backendRefs:
        - name: long-example-svc
          port: 8080
