test/e2e/features/longgatewayname/testdata/gateway-with-same-prefix-long-names.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: very-long-gateway-name-to-verify-routing-behavior-same-prefix-aaaaaaaaaaaaaaaaa-one
  annotations:
    e2e.kgateway.dev/self-managed: "true"
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: long-example-route-a
spec:
  parentRefs:
    - name: very-long-gateway-name-to-verify-routing-behavior-same-prefix-aaaaaaaaaaaaaaaaa-one
  hostnames:
    - "long-a.example.com"
  rules:
    - backendRefs:
        - name: long-example-svc
          port: 8080
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: very-long-gateway-name-to-verify-routing-behavior-same-prefix-aaaaaaaaaaaaaaaaa-two
  annotations:
    e2e.kgateway.dev/self-managed: "true"
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: long-example-route-b
spec:
  parentRefs:
    - name: very-long-gateway-name-to-verify-routing-behavior-same-prefix-aaaaaaaaaaaaaaaaa-two
  hostnames:
    - "long-b.example.com"
  rules:
    - backendRefs:
        - name: long-example-svc
          port: 8080
