test/e2e/features/longgatewayname/testdata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: long-example-svc
spec:
  selector:
    app.kubernetes.io/name: long-nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: long-nginx
  labels:
    app.kubernetes.io/name: long-nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.28.0
      ports:
        - containerPort: 80
          name: http-web-svc
